--- a/.github/workflows/provision_ec2.yml
+++ b/.github/workflows/provision_ec2.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: '$'
-          aws-secret-access-key: '$'
+          aws-access-key-id: 'AWS_KEY_ID'
+          aws-secret-access-key: 'AWS_SECRET_KEY'
           aws-region: eu-central-1
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
